--- a/src/scss/layouts/_header.scss
+++ b/src/scss/layouts/_header.scss
@@ -3,33 +3,45 @@
   justify-content: space-between;
   align-items: center;
   width: 100%;
+  padding: 0.5rem 2rem;
+  box-shadow: 0.5rem 0 0.5rem var(--light-shadow-white);
 
-  & .website-logo-container {
+  .website-logo {
+    width: 8rem;
+
+    & > img {
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  &__auth-btns {
     display: flex;
     align-items: center;
-    gap: 0 0.5rem;
-    font-size: 1.3rem;
-    font-family: cursive;
+    column-gap: 1rem;
 
-    .website-logo {
-      width: 8rem;
+    & > a {
+      text-decoration: none;
+      text-transform: capitalize;
+      color: var(--blue-primary-alpha-three);
+    }
 
-      &>img {
-        width: 100%;
-        height: 100%;
+    &__login {
+      padding: 0.8rem 2rem;
+      color: var(--blue-secondary) !important;
+
+      &:is(:hover, :focus) {
+        color: #fff !important;
       }
     }
 
-    & p {
-      font-size: 1.7rem;
-      margin-left: 2rem;
-      font-family: cursive, sans-serif, helvetica;
-      color: var(--font-primary);
+    &__signup {
+      padding: 0.8rem 2rem;
     }
   }
 }
 
-//hide profile for mob view 
+//hide profile for mob view
 .user_profile_container_desktop {
   display: none;
 
@@ -44,17 +56,9 @@
     gap: 0 1.5rem;
 
     & .user_profile {
-      &>img {
+      & > img {
         box-shadow: 0 0 2rem 0 var(--shadow);
       }
     }
-  }
-}
-
-.website_name {
-  display: none;
-
-  @include respon(m-desktop) {
-    display: block;
   }
 }
